--- a/notebooks/smokers.ipynb
+++ b/notebooks/smokers.ipynb
@@ -19,7 +19,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<thead><tr><th scope=col>Y</th><th scope=col>X1</th><th scope=col>X2</th></tr></thead>\n",
+       "<thead><tr><th scope=col>smokers</th><th scope=col>income</th><th scope=col>age</th></tr></thead>\n",
        "<tbody>\n",
        "\t<tr><td>38</td><td>1 </td><td>1 </td></tr>\n",
        "\t<tr><td>42</td><td>1 </td><td>2 </td></tr>\n",
@@ -41,7 +41,7 @@
       ],
       "text/latex": [
        "\\begin{tabular}{r|lll}\n",
-       " Y & X1 & X2\\\\\n",
+       " smokers & income & age\\\\\n",
        "\\hline\n",
        "\t 38 & 1  & 1 \\\\\n",
        "\t 42 & 1  & 2 \\\\\n",
@@ -62,7 +62,7 @@
       ],
       "text/markdown": [
        "\n",
-       "| Y | X1 | X2 |\n",
+       "| smokers | income | age |\n",
        "|---|---|---|\n",
        "| 38 | 1  | 1  |\n",
        "| 42 | 1  | 2  |\n",
@@ -82,22 +82,22 @@
        "\n"
       ],
       "text/plain": [
-       "   Y  X1 X2\n",
-       "1  38 1  1 \n",
-       "2  42 1  2 \n",
-       "3  14 1  3 \n",
-       "4  41 2  1 \n",
-       "5  41 2  2 \n",
-       "6  16 2  3 \n",
-       "7  36 3  1 \n",
-       "8  39 3  2 \n",
-       "9  18 3  3 \n",
-       "10 32 4  1 \n",
-       "11 36 4  2 \n",
-       "12 15 4  3 \n",
-       "13 28 5  1 \n",
-       "14 33 5  2 \n",
-       "15 17 5  3 "
+       "   smokers income age\n",
+       "1  38      1      1  \n",
+       "2  42      1      2  \n",
+       "3  14      1      3  \n",
+       "4  41      2      1  \n",
+       "5  41      2      2  \n",
+       "6  16      2      3  \n",
+       "7  36      3      1  \n",
+       "8  39      3      2  \n",
+       "9  18      3      3  \n",
+       "10 32      4      1  \n",
+       "11 36      4      2  \n",
+       "12 15      4      3  \n",
+       "13 28      5      1  \n",
+       "14 33      5      2  \n",
+       "15 17      5      3  "
       ]
      },
      "metadata": {},
@@ -108,7 +108,11 @@
     "# load data\n",
     "smokers = read.table('https://www.itl.nist.gov/div898/education/anova/smokers.dat', \n",
     "                     header=TRUE, skip=24, col.names = c('Y', 'X1', 'X2'))\n",
-    "smokers"
+    "\n",
+    "smokers.df = data.frame(smokers = smokers$Y, income = smokers$X1, age = smokers$X2)\n",
+    "write.csv(smokers.df, file = '../data/smokers.csv', row.names = FALSE)\n",
+    "smokers.df = read.csv('../data/smokers.csv')\n",
+    "smokers.df"
    ]
   },
   {
