Tooth Growth analysis of variance

--- a/notebooks/smokers.ipynb
+++ b/notebooks/smokers.ipynb
@@ -117,19 +117,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Call:\n",
-       "   aov(formula = Y ~ X1 * X2, data = smokers)\n",
+       "   aov(formula = smokers ~ income * age, data = smokers.df)\n",
        "\n",
        "Terms:\n",
-       "                      X1       X2    X1:X2 Residuals\n",
-       "Sum of Squares   73.6333 902.5000  57.8000  575.0000\n",
-       "Deg. of Freedom        1        1        1        11\n",
+       "                  income      age income:age Residuals\n",
+       "Sum of Squares   73.6333 902.5000    57.8000  575.0000\n",
+       "Deg. of Freedom        1        1          1        11\n",
        "\n",
        "Residual standard error: 7.229988\n",
        "Estimated effects may be unbalanced"
@@ -140,22 +140,22 @@
     }
    ],
    "source": [
-    "model = aov(Y ~ X1 * X2, smokers)\n",
+    "model = aov(smokers ~ income * age, data = smokers.df)\n",
     "model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "            Df Sum Sq Mean Sq F value Pr(>F)   \n",
-       "X1           1   73.6    73.6   1.409 0.2603   \n",
-       "X2           1  902.5   902.5  17.265 0.0016 **\n",
-       "X1:X2        1   57.8    57.8   1.106 0.3156   \n",
+       "income       1   73.6    73.6   1.409 0.2603   \n",
+       "age          1  902.5   902.5  17.265 0.0016 **\n",
+       "income:age   1   57.8    57.8   1.106 0.3156   \n",
        "Residuals   11  575.0    52.3                  \n",
        "---\n",
        "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1"
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
     "# Check model assumption for normality\n",
     "# TODO: what do residuals mean is this how we check the model assumptions for normality?\n",
     "\n",
-    "layout(matrix(c(1,2,3,4),2,2)) # optional layout \n",
+    "layout(matrix(c(1, 2, 3, 4), 2, 2)) # optional layout \n",
     "plot(model)"
    ]
   },
