Add data set description

--- a/notebooks/tooth-growth.ipynb
+++ b/notebooks/tooth-growth.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `ToothGrowth` dataset gives the results of an experiment to determine the effect of two supplements (Vitamin C and Orange Juice), each at three different doses (0.5, 1 or 2 mg) on tooth length in guinea pigs. The len variable gives the tooth growth, the supp variable gives the supplement type and the dose variable gives the supplement dose.\n",
+    "\n",
+    "The response is the length of **odontoblasts** (cells responsible for tooth growth) in 60 guinea pigs. Each animal received one of three dose levels of vitamin C (0.5, 1, and 2 mg/day) by one of two delivery methods, orange juice or ascorbic acid (a form of vitamin C and coded as VC).\n",
+    "\n",
+    "A data frame with 60 observations on 3 variables.\n",
+    "\n",
+    "```\n",
+    "-\t len\t  numeric\t Tooth length\n",
+    "-\t supp\t factor\t  Supplement type (VC or OJ).\n",
+    "-\t dose\t numeric\t Dose in milligrams/day\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
